--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/Vaishnavi1441/Restaurantpage#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.50.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
